--- a/Sources/MarkdownView/Resources/index.html
+++ b/Sources/MarkdownView/Resources/index.html
@@ -7,6 +7,6 @@
         <script src="./main.js"></script>
     </head>
     <body>
-        <div class="container" id="contents"></div>
+        <div class="content" id="contents"></div>
     </body>
 </html>
